[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/MainFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/profile.gd" type="Script" id=3]

[sub_resource type="ImageTexture" id=1]

[node name="profile" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="background" type="ColorRect" parent="."]
margin_right = 1080.0
margin_bottom = 1920.0
color = Color( 0.027451, 0.572549, 0.596078, 1 )

[node name="EditButton" type="Button" parent="background"]
margin_left = 450.0
margin_top = 1600.0
margin_right = 650.0
margin_bottom = 1700.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Edytuj"

[node name="BackButton" type="Button" parent="background"]
margin_left = 830.0
margin_top = 30.0
margin_right = 1030.0
margin_bottom = 130.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Powrót"

[node name="Notification" type="RichTextLabel" parent="background"]
margin_left = 309.0
margin_top = 1500.0
margin_right = 1009.0
margin_bottom = 1580.0
theme = ExtResource( 2 )
custom_fonts/normal_font = ExtResource( 1 )

[node name="Avatar" type="TextureRect" parent="background"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -161.5
margin_top = 200.0
margin_right = 161.5
margin_bottom = 480.0
texture = SubResource( 1 )
expand = true

[node name="Informations" type="VBoxContainer" parent="background"]
margin_left = 50.0
margin_top = 950.0
margin_right = 1013.0
margin_bottom = 1234.0
rect_min_size = Vector2( 950, 0 )
custom_constants/separation = 20

[node name="Name" type="HBoxContainer" parent="background/Informations"]
margin_right = 963.0
margin_bottom = 60.0

[node name="NameLabel" type="Label" parent="background/Informations/Name"]
margin_right = 250.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 60 )
rect_pivot_offset = Vector2( 291, 531 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
text = "Imie"
valign = 1

[node name="NameInput" type="LineEdit" parent="background/Informations/Name"]
visible = false
margin_left = 254.0
margin_right = 954.0
margin_bottom = 60.0
rect_min_size = Vector2( 700, 60 )
rect_pivot_offset = Vector2( 1884, 342 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )

[node name="NameValue" type="Label" parent="background/Informations/Name"]
margin_left = 254.0
margin_right = 954.0
margin_bottom = 60.0
rect_min_size = Vector2( 700, 60 )
rect_pivot_offset = Vector2( 1884, 342 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="Surname" type="HBoxContainer" parent="background/Informations"]
margin_top = 80.0
margin_right = 963.0
margin_bottom = 140.0

[node name="SurnameLabel" type="Label" parent="background/Informations/Surname"]
margin_right = 250.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 60 )
theme = ExtResource( 2 )
text = "Nazwisko"
valign = 1

[node name="SurnameInput" type="LineEdit" parent="background/Informations/Surname"]
visible = false
margin_left = 250.0
margin_right = 950.0
margin_bottom = 56.0
rect_min_size = Vector2( 700, 60 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )

[node name="SurnameValue" type="Label" parent="background/Informations/Surname"]
margin_left = 254.0
margin_right = 954.0
margin_bottom = 60.0
rect_min_size = Vector2( 700, 60 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="BankAccount" type="HBoxContainer" parent="background/Informations"]
margin_top = 160.0
margin_right = 963.0
margin_bottom = 220.0

[node name="BankAccountLabel" type="Label" parent="background/Informations/BankAccount"]
margin_right = 250.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 60 )
rect_pivot_offset = Vector2( -756, 263 )
theme = ExtResource( 2 )
text = "Nr konta"
valign = 1

[node name="BankAccountInput" type="LineEdit" parent="background/Informations/BankAccount"]
visible = false
margin_left = 250.0
margin_top = 35.0
margin_right = 950.0
margin_bottom = 91.0
rect_min_size = Vector2( 700, 60 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )

[node name="BankAccountValue" type="Label" parent="background/Informations/BankAccount"]
margin_left = 254.0
margin_right = 954.0
margin_bottom = 60.0
rect_min_size = Vector2( 700, 60 )
rect_pivot_offset = Vector2( -1015, 263 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="Telephone" type="HBoxContainer" parent="background/Informations"]
margin_top = 240.0
margin_right = 963.0
margin_bottom = 300.0

[node name="TelephoneLabel" type="Label" parent="background/Informations/Telephone"]
margin_right = 250.0
margin_bottom = 60.0
rect_min_size = Vector2( 250, 60 )
rect_pivot_offset = Vector2( -756, 263 )
theme = ExtResource( 2 )
text = "Nr telefonu"
valign = 1

[node name="TelephoneInput" type="LineEdit" parent="background/Informations/Telephone"]
visible = false
margin_left = 250.0
margin_top = 136.0
margin_right = 950.0
margin_bottom = 192.0
rect_min_size = Vector2( 700, 56 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )

[node name="TelephoneValue" type="Label" parent="background/Informations/Telephone"]
margin_left = 254.0
margin_top = 2.0
margin_right = 954.0
margin_bottom = 58.0
rect_min_size = Vector2( 700, 56 )
rect_pivot_offset = Vector2( -1015, 263 )
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="AvatarFileDialog" type="FileDialog" parent="."]
margin_right = 360.0
margin_bottom = 640.0
rect_scale = Vector2( 3, 3 )
window_title = "Otwórz plik"
dialog_hide_on_ok = true
mode = 0
access = 1
filters = PoolStringArray( "*.png" )
current_dir = "user://D:/00_users_data/Student_PL/Pulpit/AplikacjaIO-test_v0.1"
current_path = "user://D:/00_users_data/Student_PL/Pulpit/AplikacjaIO-test_v0.1/"

[connection signal="pressed" from="background/EditButton" to="." method="_on_EditButton_pressed"]
[connection signal="pressed" from="background/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="gui_input" from="background/Avatar" to="." method="_on_Avatar_gui_input"]
[connection signal="confirmed" from="AvatarFileDialog" to="." method="_on_AvatarFileDialog_confirmed"]
